--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -14,19 +14,42 @@
         android:padding="10dp">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="70dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imgAction"
+            android:id="@+id/tvTitleCaption"
+            style="@style/tvCaptionStyle"
+            android:text="@string/title_colon"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTitle"
+            style="@style/tvValueStyle"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@+id/imgAction"
+            app:layout_constraintStart_toEndOf="@+id/tvTitleCaption"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Sample text" />
+            tools:text="Sample Title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvByCaption"
+            style="@style/tvCaptionStyle"
+            android:layout_marginTop="10dp"
+            android:text="@string/by_colon"
+            app:layout_constraintBottom_toBottomOf="@+id/tvBy"
+            app:layout_constraintStart_toEndOf="@+id/tvBy"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvBy"
+            style="@style/tvValueStyle"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
+            app:layout_constraintStart_toEndOf="@id/tvByCaption"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+            tools:text="Sample By" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imgAction"
